Implement support for iOS

--- a/src/AutoCompleteEntry/AutoCompleteEntry.csproj
+++ b/src/AutoCompleteEntry/AutoCompleteEntry.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
     <TargetFrameworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
@@ -21,7 +21,7 @@
 
   <!-- Referenced Nuget Packages -->
   <ItemGroup>
-    <PackageReference Include="zoft.MauiExtensions.Core" Version="1.1.0" />
+    <PackageReference Include="zoft.MauiExtensions.Core" Version="1.2.0" />
   </ItemGroup>
 
   <!-- Platform Specific Files-->
