--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -15,7 +15,7 @@
     <Description>.Net MAUI Entry control that provides a list of suggestions as the user types.</Description>
     <PackageTags>net6 maui zoft AutoCompleteEntry AutoCompleteBox AutoCompleteView AutoComplete</PackageTags>
     <PackageReleaseNotes>First version of the AutoCompleteEntry</PackageReleaseNotes>
-    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <LangVersion>latest</LangVersion>
     <Platform>AnyCPU</Platform>
