Added support to .Net 7

--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -13,8 +13,8 @@
     <NeutralLanguage>en</NeutralLanguage>
     <Version>1.0.0</Version>
     <Description>.Net MAUI Entry control that provides a list of suggestions as the user types.</Description>
-    <PackageTags>net6 maui zoft AutoCompleteEntry AutoCompleteBox AutoCompleteView AutoComplete</PackageTags>
-    <PackageReleaseNotes>Entry control that makes suggestions to users as they type.</PackageReleaseNotes>
+    <PackageTags>net6 net7 maui zoft AutoCompleteEntry AutoCompleteBox AutoCompleteView AutoComplete</PackageTags>
+    <PackageReleaseNotes>Added support to .Net 7 </PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <LangVersion>latest</LangVersion>
