--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+src/.idea/
+src/.DS_Store
+.DS_Store
