--- a/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
+++ b/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
@@ -10,6 +10,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<WindowsPackageType>None</WindowsPackageType>
 
 		<!-- Display name -->
 		<ApplicationTitle>AutoCompleteEntry.Sample</ApplicationTitle>
