--- a/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
+++ b/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
@@ -51,6 +51,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
+	  <PackageReference Include="zoft.MauiExtensions.Core" Version="3.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -58,8 +59,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.80" />
-	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.80" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
 	</ItemGroup>
 
 </Project>
