--- a/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
+++ b/sample/AutoCompleteEntry.Sample/AutoCompleteEntry.Sample.csproj
@@ -63,4 +63,16 @@
 	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Views\NoBorder.xaml.cs">
+	    <DependentUpon>NoBorder.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\NoBorder.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
